--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ a {
 
 .row {
     display: flex;
-    padding-top: 6rem;
+    padding-top: 3rem;
 }
 
 .col-4 {
@@ -94,11 +94,11 @@ nav.container.d-flex {
     width: 100%;
 }
 
-.img-1, .img-2, .img-3 {
+.img-1, .img-2, .img-3, .img-4 {
     position: absolute;
 }
 
-.img-1b, .img-2b, .img-3b {
+.img-1b, .img-2b, .img-3b, .img-4b {
 position: absolute;
 }
 
@@ -118,6 +118,10 @@ position: absolute;
 }
 
 .img-3:hover {
+    opacity: 0;
+}
+
+.img-4:hover {
     opacity: 0;
 }
 
